@@ -36,7 +36,7 @@
 #include <libcstring_types.h>
 #include <libcstring_wide_string.h>
 
-#elif defined( HAVE_LIBCSTRING_H )
+#else
 
 /* If libtool DLL support is enabled set LIBCSTRING_DLL_IMPORT
  * before including libcstring.h
@@ -47,8 +47,6 @@
 
 #include <libcstring.h>
 
-#else
-#error Missing libcstring.h
 #endif
 
 #endif
