@@ -2,6 +2,9 @@ TODO
 * add support for retrieving identifier values
   - add test
 
+20120426
+* fixes for pkg-config detection of libraries
+
 20120422
 * changed byte order to int
 
